Added automatic domain path retrieval Added period

--- a/WebLogParser/App.config
+++ b/WebLogParser/App.config
@@ -19,6 +19,9 @@
             <setting name="DomenPath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Period" serializeAs="String">
+                <value>3</value>
+            </setting>
         </WebLogParser.Properties.Settings>
     </userSettings>
 </configuration>
