--- a/WebLogParser/Properties/Settings.settings
+++ b/WebLogParser/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="DomenPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Period" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">3</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
